cmake_minimum_required(VERSION 2.8)
project(ljmd)
#set(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake")
set (ljmd_VERSION_MAJOR 1)
set (ljmd_VERSION_MINOR 0)
set(CMAKE_CXX_FLAGS "-std=gnu++11 -Wall -fopenmp")
include_directories(include)
install(DIRECTORY include/ DESTINATION include/ljmd FILES_MATCHING PATTERN "*.h")
add_subdirectory(src)
